--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="test-r3fiber" />
 
-  <title>test-r3fiber</title>
+  <title>react-three-fiber-cannon-drei-004</title>
 </head>
 
 <body>
